--- a/articleStructureRisePage.html
+++ b/articleStructureRisePage.html
@@ -8,8 +8,8 @@
     <meta name="keywords" content="טכנולוגיות למידה, הדרכות " />
     <meta name="author" content="קורל ששון ודולב קליינר " />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image" href="images/Logo 3.png">
-
+ <!--לוגו עמוד-->
+ <link rel="icon" type="image/png" href="images/Logo 3.png">
 
     <!-- CSS -->
     <link href="styles/bootstrap.rtl.min.css" rel="stylesheet" />
@@ -17,6 +17,7 @@
   <!-- Icon Font Stylesheet -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
 
     <!-- JS -->
     <script src="jScripts/bootstrap.bundle.min.js"></script>
@@ -104,17 +105,17 @@
 
 
 <!--תפריט ניווט סוף-->
-
 <header>
   <div class="header">
-   
     <div class="container-xxl pb-lg-5 hero-header">
       <!--פירורי לחם-->
       <div class="pt-3">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb justify-content-start">
           <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-          <li class="breadcrumb-item" aria-current="page">חיפוש מאמרים</li>
+          <li class="breadcrumb-item" aria-current="page"><a href="resourcesTypes.html" class="my-link">סוגי מקורות מידע</a> </li>
+          <li class="breadcrumb-item" aria-current="page">מבנה המאמר האקדמי</li>
+
          </ol>
          </nav> 
         </div>
@@ -123,70 +124,21 @@
           <div class="row g-5 py-lg-5">
             <div class="container">  
               <div class="section-title position-relative text-start mb-5 pb-2">
-                <h2>חיפוש מאמרים</h2>                
+                <h2>מבנה המאמר האקדמי</h2>                
             </div>
           </div>
        </div>
        </div>
-      </div>
+      </div>  
      </div>
-     </header>   
-
-
-   <main class="p-4">
-    <div class="position-relative">
-      <img src="images/Vector.png" class="background-image">
-      <div class="container pt-lg-3 myCardsContainer">
-        <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5> 
-      <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
-        <div class="col pb-4">
-          <div class="card cardInnerPage"  id="tobooleanRise">
-            <img src="images/Group 93.png" class="card-img-top" alt="..." style="padding: 10px;">
-            <div class="card-body d-flex flex-column" >
-              <h5 class="card-title">שימוש בלוגיקה בוליאנית</h5>
-              <p class="card-text">הסבר על אופן השימוש באופרטורים AND, OR, NOT לייעול החיפוש </p>
-            </div>
-            <div class="p-3 d-none d-md-block">
-              <span class="badge badge-pill badge-light w-auto">לומדה</span>
-              <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
-            </div>
-          </div>
-        </div>
-        <div class="col pb-4">
-          <div class="card cardInnerPage"  id="toEnglishSearchRise">
-            <img src="images/Group 95.png" class="card-img-top" alt="..." style="padding: 10px;">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title">חיפוש יעיל בשפה האנגלית</h5>
-              <p class="card-text">שימוש נכון במילות מפתח בשפה האנגלית עשויי לסייע בהרחבת מילות החיפוש וכן לקצר את תהליך החיפוש באופן משמעותי</div>
-                <div class="p-3 d-none d-md-block">
-                  <span class="badge badge-pill badge-light w-auto">לומדה</span>
-              <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
-            </div>
-            </div>
-        </div>
-        <div class="col pb-4">
-        <div class="card cardInnerPage" id="toAdvancedSearchPage">
-          <img src="images/Group 92.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title">חיפוש מתקדם במאגרי מידע</h5>
-            <p class="card-text">
-              הסבר על הגדרות נפוצות של חיפוש מתקדם לביצוע סינון יעיל 
-              של תוצאות החיפוש במאגר המידע  </p>
-       </div>
-       <div class="p-3 d-none d-md-block">
-        <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
-            <span class="badge badge-pill badge-light w-auto"> 3 דקות</span> 
-        </div>
-      </div>
-      </div>
-   
-    
-    </div>
+     </header>  
+   <main>
+    <div class="container" >
+    <iframe src="allTheRisesFolder/articleStructureRise/index.html" width="100%" height="500"></iframe>
   </div>
-    </div>
 </main>
 
-
+  
 <footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
     <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
