--- a/faqPage.html
+++ b/faqPage.html
@@ -26,7 +26,6 @@
 </head>
 <body lang="he" dir="rtl" class="position-relative">
 
-
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
   <a class="navbar-brand" href="index.html">
@@ -46,34 +45,39 @@
         <ul class="dropdown-menu">
           <li> <a href="startpage.html" class="dropdown-item">איך מתחילים&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">פורטל הספרייה</a></li>
-              <li><a class="dropdown-item" href="#">קטלוג הספרייה</a></li>
+              <li><a class="dropdown-item" href="logInToCatalogVideoPage.html">פורטל הספרייה</a></li>
+              <li><a class="dropdown-item" href="libraryCatalogVideoPage.html">קטלוג הספרייה</a></li>
             </ul>
           </li>
           <li>  <a href="resourcesTypes.html" class="dropdown-item">סוגי מקורות מידע&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">מבנה המאמר האקדמי</a></li>
-              <li><a class="dropdown-item" href="#">סוגי מקורות מידע</a></li>
-              <li><a class="dropdown-item" href="#">הערכת מידע באינטרנט</a> </li>
+              <li><a class="dropdown-item" href="informationAssesRisePage.html">הערכת מידע באינטרנט</a> </li>
+              <li><a class="dropdown-item" href="resourcesTypesRisePage.html">סוגי מקורות מידע</a></li>
+              <li><a class="dropdown-item" href="articleStructureRisePage.html">מבנה המאמר האקדמי</a></li>
             </ul>
           </li>
           <li>   <a href="dataBases.html" class="dropdown-item">מאגרי מידע&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">מהו מאגר מידע</a></li>
-              <li><a class="dropdown-item" href="#">הבדלים בין מאגרי מידע</a></li>
+              <li><a class="dropdown-item" href="whatIsDataBasePage.html">מהו מאגר מידע</a></li>
+              <li><a class="dropdown-item" href="databasetypesRisePage.html">הבדלים בין מאגרי מידע</a></li>
+              <li><a class="dropdown-item" href="dataBasesByPage.html">רשימת מאגרי מידע</a></li>
+
             </ul>
           </li>
           <li>   <a href="searchingArticles.html" class="dropdown-item">חיפוש מאמרים&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">חיפוש מתקדם</a></li>
-              <li><a class="dropdown-item" href="#">לוגיקה בוליאנית</a></li>
+              <li><a class="dropdown-item" href="booleanpage.html">לוגיקה בוליאנית</a></li>
               <li><a class="dropdown-item" href="englishRisePage.html">חיפוש יעיל באנגלית</a> </li>
+              <li><a class="dropdown-item" href="advancedSearchVideoPage.html">חיפוש מתקדם</a></li>
+          
             </ul>
           </li>
           <li> <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">כללי ציטוט</a></li>
-              <li><a class="dropdown-item" href="#">כלים טכנולוגיים לציטוט</a></li>
+              <li><a class="dropdown-item" href="whatisbibListRisePage.html">מהי רשימה ביבליוגרפית</a></li>
+              <li><a class="dropdown-item" href="createBibListVideoPage.html">יצירת רשימה ביבליוגרפית</a></li>
+              <li><a class="dropdown-item" href="citationRisePage.html">כללי ציטוט</a></li>
+
             </ul>
           </li>
        </ul>
@@ -98,7 +102,6 @@
   </form>
   </div>
 </nav>
-
 
 
 <!--תפריט ניווט סוף-->
@@ -140,9 +143,9 @@
         </h2>
         <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
           <div class="accordion-body"><b>תשובה:</b> כדי לחפש מאמרים באופן ממוקד תוך חיסכון משמעותי בזמן חשוב להיעזר בשלושה מרכיבים עיקריים של המאמר האקדמי: כותרת המאמר, תקציר המאמר ומילות המפתח המופיעות בסוף התקציר.
-אם שלושת החלקים האלו מתייחסים לנושא עליו אתם חוקרים - תוכלו לקבוע בקלות אם מדובר במאמר הרלוונטי לעבודתכם האקדמית. כדי ללמוד עוד על מבנה המאמר האקדמי <a href=””>לחצו כאן</a>.<br><br>
-בנוסף, כדי למקד את תהליך החיפוש מומלץ להשתמש בפונקציונליות של חיפוש מתקדם במאגרי המידע. רוצים ללמוד איך לבצע חיפוש מתקדם במאגר מידע? <a href="">צפו בסרטון</a>.
-<br><br>יחידות לימוד נוספות שיכולות לסייע לכם לבצע חיפוש יעיל: <a href="">שימוש בלוגיקה בוליאנית</a>, <a href=""> חיפוש יעיל בשפה האנגלית</a>.</div>
+אם שלושת החלקים האלו מתייחסים לנושא עליו אתם חוקרים - תוכלו לקבוע בקלות אם מדובר במאמר הרלוונטי לעבודתכם האקדמית. כדי ללמוד עוד על מבנה המאמר האקדמי <a href=”articleStructureRisePage”>לחצו כאן</a>.<br><br>
+בנוסף, כדי למקד את תהליך החיפוש מומלץ להשתמש בפונקציונליות של חיפוש מתקדם במאגרי המידע. רוצים ללמוד איך לבצע חיפוש מתקדם במאגר מידע? <a href="advancedSearchVideoPage.html">צפו בסרטון</a>.
+<br><br>יחידות לימוד נוספות שיכולות לסייע לכם לבצע חיפוש יעיל: <a href="booleanpage.html">שימוש בלוגיקה בוליאנית</a>, <a href="englishRisePage.html"> חיפוש יעיל בשפה האנגלית</a>.</div>
         </div>
       </div>
       <div class="accordion-item">
@@ -153,7 +156,7 @@
         </h2>
         <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
           <div class="accordion-body"><b>תשובה: </b>כאשר מתחברים למאגר מידע כסטודנט של מוסד לימודים מוכר מתאפשרת גישה חינמית למקורות המידע המופיעים במאגרים השונים. <br><br>
-            כדי ללמוד על אופן ההתחברות כסטודנט בHIT יש להיכנס ליחידת לימוד <a href="">מהו מאגר מידע</a> ולצפות בסרטון המסביר על פעולה זו.
+            כדי ללמוד על אופן ההתחברות כסטודנט בHIT יש להיכנס ליחידת לימוד <a href="whatIsDataBasePage.html">מהו מאגר מידע</a> ולצפות בסרטון המסביר על פעולה זו.
           </div>
         </div>
       </div>
@@ -165,7 +168,7 @@
         </h2>
         <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
           <div class="accordion-body"><b>תשובה:</b> בכל מאגר מידע ניתן למצוא מקורות מידע רלוונטיים בהתאם לתחומי הדעת בו הוא עוסק.<br><br>
-            קראו בהרחבה על נושא זה ביחידת הלימוד <a href=""> הבדלים בין מאגרי מידע</a>, שם ישנה חלוקה של מאגרי מידע לפי פקולטות במכון הטכנולוגי HIT.</div>
+            קראו בהרחבה על נושא זה ביחידת הלימוד <a href="databasetypesRisePage.html"> הבדלים בין מאגרי מידע</a>, שם ישנה חלוקה של מאגרי מידע לפי פקולטות במכון הטכנולוגי HIT.</div>
         </div>
       </div>
       <div class="accordion-item">
@@ -175,7 +178,7 @@
           </button>
         </h2>
         <div id="flush-collapse4" class="accordion-collapse collapse" aria-labelledby="flush-heading4" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body"><b>תשובה:</b> בזכות שימוש נכון בכלים טכנולוגיים ניתן לקצר את תהליך יצירת הרשימה הביבליוגרפית וליצור אותה ביעילות תוך חיסכון זמן משמעותי. <br>צפו  <a href="">בסרטון</a> כדי ללמוד איך ליצור רשימת מקורות באמצעות התוכנה MyBib.
+          <div class="accordion-body"><b>תשובה:</b> בזכות שימוש נכון בכלים טכנולוגיים ניתן לקצר את תהליך יצירת הרשימה הביבליוגרפית וליצור אותה ביעילות תוך חיסכון זמן משמעותי. <br>צפו  <a href="createBibListVideoPage.html">בסרטון</a> כדי ללמוד איך ליצור רשימת מקורות באמצעות התוכנה MyBib.
           </div>
         </div>
       </div>
@@ -203,7 +206,7 @@
             <div class="img">
               <img src="images/image005.png" class="img-fluid">
             </div><br>
-            קראו בהרחבה על נושא ביקורת עמיתים ביחידת הלימוד  <a href="">הערכת מידע באינטרנט.</a>
+            קראו בהרחבה על נושא ביקורת עמיתים ביחידת הלימוד  <a href="informationAssesRisePage.html">הערכת מידע באינטרנט.</a>
           </div>
         </div>
       </div>
