--- a/startpage.html
+++ b/startpage.html
@@ -25,7 +25,6 @@
 </head>
 <body lang="he" dir="rtl" class="position-relative">
 
-
 <!--תפריט ניווט-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
   <a class="navbar-brand" href="index.html">
@@ -45,34 +44,39 @@
         <ul class="dropdown-menu">
           <li> <a href="startpage.html" class="dropdown-item">איך מתחילים&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">פורטל הספרייה</a></li>
-              <li><a class="dropdown-item" href="#">קטלוג הספרייה</a></li>
+              <li><a class="dropdown-item" href="logInToCatalogVideoPage.html">פורטל הספרייה</a></li>
+              <li><a class="dropdown-item" href="libraryCatalogVideoPage.html">קטלוג הספרייה</a></li>
             </ul>
           </li>
           <li>  <a href="resourcesTypes.html" class="dropdown-item">סוגי מקורות מידע&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">מבנה המאמר האקדמי</a></li>
-              <li><a class="dropdown-item" href="#">סוגי מקורות מידע</a></li>
-              <li><a class="dropdown-item" href="#">הערכת מידע באינטרנט</a> </li>
+              <li><a class="dropdown-item" href="informationAssesRisePage.html">הערכת מידע באינטרנט</a> </li>
+              <li><a class="dropdown-item" href="resourcesTypesRisePage.html">סוגי מקורות מידע</a></li>
+              <li><a class="dropdown-item" href="articleStructureRisePage.html">מבנה המאמר האקדמי</a></li>
             </ul>
           </li>
           <li>   <a href="dataBases.html" class="dropdown-item">מאגרי מידע&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">מהו מאגר מידע</a></li>
-              <li><a class="dropdown-item" href="#">הבדלים בין מאגרי מידע</a></li>
+              <li><a class="dropdown-item" href="whatIsDataBasePage.html">מהו מאגר מידע</a></li>
+              <li><a class="dropdown-item" href="databasetypesRisePage.html">הבדלים בין מאגרי מידע</a></li>
+              <li><a class="dropdown-item" href="dataBasesByPage.html">רשימת מאגרי מידע</a></li>
+
             </ul>
           </li>
           <li>   <a href="searchingArticles.html" class="dropdown-item">חיפוש מאמרים&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">חיפוש מתקדם</a></li>
-              <li><a class="dropdown-item" href="#">לוגיקה בוליאנית</a></li>
+              <li><a class="dropdown-item" href="booleanpage.html">לוגיקה בוליאנית</a></li>
               <li><a class="dropdown-item" href="englishRisePage.html">חיפוש יעיל באנגלית</a> </li>
+              <li><a class="dropdown-item" href="advancedSearchVideoPage.html">חיפוש מתקדם</a></li>
+          
             </ul>
           </li>
           <li> <a href="bibList.html" class="dropdown-item">רשימה ביבליוגרפית&raquo; </a>
             <ul class="submenu dropdown-menu">
-              <li><a class="dropdown-item" href="#">כללי ציטוט</a></li>
-              <li><a class="dropdown-item" href="#">כלים טכנולוגיים לציטוט</a></li>
+              <li><a class="dropdown-item" href="whatisbibListRisePage.html">מהי רשימה ביבליוגרפית</a></li>
+              <li><a class="dropdown-item" href="createBibListVideoPage.html">יצירת רשימה ביבליוגרפית</a></li>
+              <li><a class="dropdown-item" href="citationRisePage.html">כללי ציטוט</a></li>
+
             </ul>
           </li>
        </ul>
@@ -97,8 +101,6 @@
   </form>
   </div>
 </nav>
-
-
 
 
 <!--תפריט ניווט סוף-->
