--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <li class="nav-item dropdown" id="myDropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">תכנים</a>
         <ul class="dropdown-menu">
-          <li> <a href="startpage.html" class="dropdown-item">איך מתחילים&raquo; </a>
+          <li> <a href="startpage.html" class="dropdown-item">פורטל וקטלוג הספרייה&raquo; </a>
             <ul class="submenu dropdown-menu">
               <li><a class="dropdown-item" href="logInToCatalogVideoPage.html">פורטל הספרייה</a></li>
               <li><a class="dropdown-item" href="libraryCatalogVideoPage.html">קטלוג הספרייה</a></li>
@@ -90,6 +90,10 @@
       <li class="nav-item">
         <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
+      <li class="nav-item" >
+        <a class="nav-link" style="color: teal!important;;" href="https://www.hit.ac.il/primo/">קטלוג ספריית HIT</a>
+      </li>
+      
    </ul>
    <form class="form-inline mb-2 mb-md-0 d-flex">
     <div class="input-group">
@@ -137,10 +141,15 @@
       <div class="card" style="animation: fadein 1.5s;">
         <img src="images/Group 242.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">איך מתחילים</h5>
-          <p class="card-text">פורטל הספרייה וקטלוג הספרייה מציעים מאגר חיפוש של ספרים, מאמרים ופרויקטי גמר וביצוע של מגוון פעולות ישירות מעמדת המידע באופן מהיר ופשוט.
+          <h5 class="card-title">פורטל וקטלוג הספרייה</h5> 
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto">#ספרים ומאמרים</span>
+            <span class="badge badge-pill badge-light w-auto">#התחברות לפורטל</span> 
+          </div>    
+          <p class="card-text">פורטל הספרייה וקטלוג הספרייה מציעים מאגר חיפוש של ספרים, מאמרים ופרויקטי גמר. למדו כיצד לבצע פעולות מעמדת המידע באופן מהיר ופשוט.
           </p>
         </div>
+        
       </div>
         </a>
     </div>
@@ -152,7 +161,11 @@
         <img src="images/Group 105.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">סוגי מקורות מידע</h5>
-          <p class="card-text">כדי לחפש מקורות מידע רלוונטיים באופן מקוון חשוב להכיר את מבנה המאמר האקדמי, את סוגי מקורות המידע האקדמיים הקיימים ולבצע הערכה של אמינות המקורות באינטרנט בהתאם.
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto">#מאפייני המאמר האקדמי</span>
+            <span class="badge badge-pill badge-light w-auto">#הערכת מידע</span>
+          </div> 
+          <p class="card-text">הכירו את מבנה המאמר האקדמי, את סוגי מקורות המידע האקדמיים הקיימים וכיצד ניתן להעריך אמינות המקורות באינטרנט.
           </p>
         </div>
       </div>
@@ -166,7 +179,11 @@
         <img src="images/Group 106.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">מאגרי מידע</h5>
-          <p class="card-text">על מנת לבצע חיפוש יעיל במאגרי המידע חשוב להכיר את ההבדלים בין המאגרים, היתרונות והחסרונות והחלוקה לתחומי דעת של כל מאגר והמידע העיקרי המופיע בו. 
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto">#מהו מאגר מידע</span>
+            <span class="badge badge-pill badge-light w-auto">#מאגרי מידע לפי תחום</span> 
+          </div>    
+          <p class="card-text">למדו על ההבדלים בין המאגרים, היתרונות והחסרונות והחלוקה לתחומי דעת של כל מאגר והמידע העיקרי המופיע בו. 
           </p>
         </div>
       </div>
@@ -180,7 +197,11 @@
         <img src="images/Group 108.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">חיפוש מאמרים</h5>
-          <p class="card-text">ישנם מספר מושגים בסיסיים שחשוב להכיר ולדעת כיצד ליישם אותם כדי לייעל את תהליך החיפוש. כגון: אופרטורים בוליאניים AND-OR-NOT, מילות מפתח, מילים נרדפות ועוד.</p>
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto">#איך לחפש במאגר</span>
+            <span class="badge badge-pill badge-light w-auto">#שאילתות חיפוש</span>
+          </div> 
+          <p class="card-text">ישנם מספר מושגים שחשוב להכיר כדי לייעל את תהליך החיפוש. כגון: אופרטורים בוליאניים AND-OR-NOT, מילות מפתח, מילים נרדפות ועוד.</p>
         </div>
       </div>
         </a>
@@ -193,7 +214,11 @@
         <img src="images/Group 109.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">רשימה ביבליוגרפית</h5>
-          <p class="card-text">כיום בכל עבודה אקדמית ישנה דרישת חובה ליצירת רשימה ביבליוגרפית. כדי ליצור רשימה ביבליוגרפית באופן קל ופשוט חשוב להכיר את כללי הציטוט ולהיעזר בכלים טכנולוגיים ליצירת רשימה ביבליוגרפית.
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto">#יצירת רשימה ביבליוגרפית</span>
+            <span class="badge badge-pill badge-light w-auto">#כללי ציטוט</span>
+          </div> 
+          <p class="card-text">כדי ליצור רשימה ביבליוגרפית באופן קל ופשוט חשוב להכיר את כללי הציטוט ולהיעזר בכלים טכנולוגיים ליצירת רשימה ביבליוגרפית.
           </p>
         </div>
       </div>
@@ -212,7 +237,7 @@
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
         <ul class="list-unstyled mt-2">
-          <li><a href="startpage.html">איך מתחילים?</a></li>
+          <li><a href="startpage.html">פורטל וקטלוג הספרייה</a></li>
           <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
           <li><a href="dataBases.html">מאגרי מידע</a></li>
           <li><a href="searchingArticles.html">חיפוש מאמרים</a></li>
