--- a/startpage.html
+++ b/startpage.html
@@ -42,7 +42,7 @@
       <li class="nav-item dropdown" id="myDropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">תכנים</a>
         <ul class="dropdown-menu">
-          <li> <a href="startpage.html" class="dropdown-item">איך מתחילים&raquo; </a>
+          <li> <a href="startpage.html" class="dropdown-item">פורטל וקטלוג הספרייה&raquo; </a>
             <ul class="submenu dropdown-menu">
               <li><a class="dropdown-item" href="logInToCatalogVideoPage.html">פורטל הספרייה</a></li>
               <li><a class="dropdown-item" href="libraryCatalogVideoPage.html">קטלוג הספרייה</a></li>
@@ -87,6 +87,9 @@
       <li class="nav-item">
         <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
+      <li class="nav-item" >
+        <a class="nav-link" style="color: teal!important;;" href="https://www.hit.ac.il/primo/">קטלוג ספריית HIT</a>
+      </li>
    </ul>
    <form class="form-inline mb-2 mb-md-0 d-flex">
     <div class="input-group">
@@ -115,7 +118,7 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb justify-content-start">
           <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-          <li class="breadcrumb-item" aria-current="page">איך מתחילים לחפש</li>
+          <li class="breadcrumb-item" aria-current="page">קטלוג הספרייה</li>
          </ol>
          </nav> 
         </div>
@@ -124,8 +127,9 @@
           <div class="row g-5 py-lg-5">
             <div class="container">  
               <div class="section-title position-relative text-start mb-5 pb-2">
-                <h2>איך מתחילים לחפש</h2>                
+                <h2>קטלוג הספרייה</h2>                
             </div>
+            
           </div>
        </div>
        </div>
@@ -138,6 +142,7 @@
     <div class="position-relative">
     <img src="images/Vector4.png" class="background-image">
     <div class="container p-4 myCardsContainer">
+     
     <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
@@ -186,7 +191,7 @@
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
         <ul class="list-unstyled mt-2">
-          <li><a href="startpage.html">איך מתחילים?</a></li>
+          <li><a href="startpage.html">פורטל וקטלוג הספרייה</a></li>
           <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
           <li><a href="dataBases.html">מאגרי מידע</a></li>
           <li><a href="searchingArticles.html">חיפוש מאמרים</a></li>
