--- a/whatisbibListRisePage.html
+++ b/whatisbibListRisePage.html
@@ -88,6 +88,9 @@
       <li class="nav-item">
         <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
+      <li class="nav-item" >
+        <a class="nav-link" style="color: teal!important;;" href="https://www.hit.ac.il/primo/">קטלוג ספריית HIT</a>
+      </li>
    </ul>
    <form class="form-inline mb-2 mb-md-0 d-flex">
     <div class="input-group">
