--- a/libraryCatalogVideoPage.html
+++ b/libraryCatalogVideoPage.html
@@ -43,7 +43,7 @@
       <li class="nav-item dropdown" id="myDropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">תכנים</a>
         <ul class="dropdown-menu">
-          <li> <a href="startpage.html" class="dropdown-item">איך מתחילים&raquo; </a>
+          <li> <a href="startpage.html" class="dropdown-item">פורטל וקטלוג הספרייה&raquo; </a>
             <ul class="submenu dropdown-menu">
               <li><a class="dropdown-item" href="logInToCatalogVideoPage.html">פורטל הספרייה</a></li>
               <li><a class="dropdown-item" href="libraryCatalogVideoPage.html">קטלוג הספרייה</a></li>
@@ -88,6 +88,9 @@
       <li class="nav-item">
         <a class="nav-link" href="sitemap.html">מפת אתר</a>
       </li>
+      <li class="nav-item" >
+        <a class="nav-link" style="color: teal!important;;" href="https://www.hit.ac.il/primo/">קטלוג ספריית HIT</a>
+      </li>
    </ul>
    <form class="form-inline mb-2 mb-md-0 d-flex">
     <div class="input-group">
@@ -113,7 +116,7 @@
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb justify-content-start">
           <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-          <li class="breadcrumb-item" aria-current="page"><a href="startpage.html" class="my-link">איך מתחילים</a> </li>
+          <li class="breadcrumb-item" aria-current="page"><a href="startpage.html" class="my-link">פורטל וקטלוג הספרייה</a> </li>
           <li class="breadcrumb-item" aria-current="page">חיפוש בקטלוג ספריית HIT</li>
 
          </ol>
@@ -152,7 +155,7 @@
         <a class="text-black">תכנים</a>
         <div class="text-lg-start">
         <ul class="list-unstyled mt-2">
-          <li><a href="startpage.html">איך מתחילים?</a></li>
+          <li><a href="startpage.html">פורטל וקטלוג הספרייה</a></li>
           <li><a href="resourcesTypes.html">סוגי מקורות אקדמיים</a></li>
           <li><a href="dataBases.html">מאגרי מידע</a></li>
           <li><a href="searchingArticles.html">חיפוש מאמרים</a></li>
