--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <img src="images/Group 106.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">מאגרי מידע</h5>
-          <div class="pb-lg-2 d-md-block">
+          <div class="pb-lg-2 d-none d-md-block">
             <span class="badge badge-pill badge-light w-auto">#מהו מאגר מידע</span>
             <span class="badge badge-pill badge-light w-auto">#מאגרי מידע לפי תחום</span> 
           </div>    
