--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         <div class="card-body">
           <h5 class="card-title">פורטל וקטלוג הספרייה</h5> 
           <div class="pb-lg-2 d-md-block">
-            <span class="badge badge-pill badge-light w-auto">#ספרים ומאמרים</span>
-            <span class="badge badge-pill badge-light w-auto">#התחברות לפורטל</span> 
+            <span class="badge badge-pill badge-light w-auto" data-link="startpage.html">#ספרים ומאמרים</span>
+            <span class="badge badge-pill badge-light w-auto" data-link="startpage.html">#התחברות לפורטל</span> 
           </div>    
           <p class="card-text">פורטל הספרייה וקטלוג הספרייה מציעים מאגר חיפוש של ספרים, מאמרים ופרויקטי גמר. למדו כיצד לבצע פעולות מעמדת המידע באופן מהיר ופשוט.
           </p>
@@ -162,8 +162,8 @@
         <div class="card-body">
           <h5 class="card-title">סוגי מקורות מידע</h5>
           <div class="pb-lg-2 d-md-block">
-            <span class="badge badge-pill badge-light w-auto">#מאפייני המאמר האקדמי</span>
-            <span class="badge badge-pill badge-light w-auto">#הערכת מידע</span>
+            <span class="badge badge-pill badge-light w-auto" data-link="resourcesTypes.html">#מאפייני המאמר האקדמי</span>
+            <span class="badge badge-pill badge-light w-auto"data-link="resourcesTypes.html" >#הערכת מידע</span>
           </div> 
           <p class="card-text">הכירו את מבנה המאמר האקדמי, את סוגי מקורות המידע האקדמיים הקיימים וכיצד ניתן להעריך אמינות המקורות באינטרנט.
           </p>
@@ -179,9 +179,9 @@
         <img src="images/Group 106.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">מאגרי מידע</h5>
-          <div class="pb-lg-2 d-none d-md-block">
-            <span class="badge badge-pill badge-light w-auto">#מהו מאגר מידע</span>
-            <span class="badge badge-pill badge-light w-auto">#מאגרי מידע לפי תחום</span> 
+          <div class="pb-lg-2 d-md-block">
+            <span class="badge badge-pill badge-light w-auto"data-link="dataBases.html">#מהו מאגר מידע</span>
+            <span class="badge badge-pill badge-light w-auto" data-link="dataBases.html">#מאגרי מידע לפי תחום</span> 
           </div>    
           <p class="card-text">למדו על ההבדלים בין המאגרים, היתרונות והחסרונות והחלוקה לתחומי דעת של כל מאגר והמידע העיקרי המופיע בו. 
           </p>
@@ -198,8 +198,8 @@
         <div class="card-body">
           <h5 class="card-title">חיפוש מאמרים</h5>
           <div class="pb-lg-2 d-md-block">
-            <span class="badge badge-pill badge-light w-auto">#איך לחפש במאגר</span>
-            <span class="badge badge-pill badge-light w-auto">#שאילתות חיפוש</span>
+            <span class="badge badge-pill badge-light w-auto" data-link="searchingArticles.html">#איך לחפש במאגר</span>
+            <span class="badge badge-pill badge-light w-auto"data-link="searchingArticles.html">#שאילתות חיפוש</span>
           </div> 
           <p class="card-text">ישנם מספר מושגים שחשוב להכיר כדי לייעל את תהליך החיפוש. כגון: אופרטורים בוליאניים AND-OR-NOT, מילות מפתח, מילים נרדפות ועוד.</p>
         </div>
@@ -215,8 +215,8 @@
         <div class="card-body">
           <h5 class="card-title">רשימה ביבליוגרפית</h5>
           <div class="pb-lg-2 d-md-block">
-            <span class="badge badge-pill badge-light w-auto">#יצירת רשימה ביבליוגרפית</span>
-            <span class="badge badge-pill badge-light w-auto">#כללי ציטוט</span>
+            <span class="badge badge-pill badge-light w-auto" data-link="bibList.html">#יצירת רשימה ביבליוגרפית</span>
+            <span class="badge badge-pill badge-light w-auto"data-link="bibList.html">#כללי ציטוט</span>
           </div> 
           <p class="card-text">כדי ליצור רשימה ביבליוגרפית באופן קל ופשוט חשוב להכיר את כללי הציטוט ולהיעזר בכלים טכנולוגיים ליצירת רשימה ביבליוגרפית.
           </p>
