--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -136,13 +136,13 @@
      </header>   
 
 
-   <main class="p-4">
+   <main>
     <div class="position-relative">
       <img src="images/Vector.png" class="background-image">
       <div class="container pt-lg-3 myCardsContainer">
         <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5> 
-      <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
-        <div class="col pb-4">
+        <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
+          <div class="col pb-4">
           <div class="card cardInnerPage"  id="tobooleanRise">
             <img src="images/Group 93.png" class="card-img-top" alt="..." style="padding: 10px;">
             <div class="card-body d-flex flex-column" >
@@ -155,12 +155,14 @@
             </div>
           </div>
         </div>
+      
+        
         <div class="col pb-4">
           <div class="card cardInnerPage"  id="toEnglishSearchRise">
             <img src="images/Group 95.png" class="card-img-top" alt="..." style="padding: 10px;">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">חיפוש יעיל בשפה האנגלית</h5>
-              <p class="card-text">שימוש נכון במילות מפתח בשפה האנגלית עשויי לסייע בהרחבת מילות החיפוש וכן לקצר את תהליך החיפוש באופן משמעותי</div>
+              <p class="card-text">שימוש במילות מפתח בשפה האנגלית מסייע בהרחבת החיפוש ומקצר את תהליך החיפוש  </div>
                 <div class="p-3 d-none d-md-block">
                   <span class="badge badge-pill badge-light w-auto">לומדה</span>
               <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
@@ -173,7 +175,7 @@
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">חיפוש מתקדם במאגרי מידע</h5>
             <p class="card-text">
-              הסבר על הגדרות נפוצות של חיפוש מתקדם לביצוע סינון יעיל 
+              הגדרות שימושיות לביצוע סינון יעיל 
               של תוצאות החיפוש במאגר המידע  </p>
        </div>
        <div class="p-3 d-none d-md-block">
