--- a/dataBases.html
+++ b/dataBases.html
@@ -141,15 +141,15 @@
         
    <main>
     <div class="position-relative">
-    <img src="images/Group.png" class="background-image">
-    <div class="container p-4 myCardsContainer">
-      <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
-      <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
-        <div class="col pb-4">
+      <img src="images/Vector (1).png" class="background-image">
+      <div class="container p-4 myCardsContainer">
+        <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
+    <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
+      <div class="col pb-4">
           <a href="whatIsDataBasePage.html"  class="text-decoration-none">
         <div class="card cardInnerPage">
           <img src="images/Group 89.png" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">מהו מאגר מידע?</h5>
             <p class="card-text">הסבר על מאגרי מידע, המאפיינים העיקריים של המאגרים ואופן הגישה אליהם</p>
           </div>
@@ -165,7 +165,7 @@
         <a href="databasetypesRisePage.html"  class="text-decoration-none">
         <div class="card cardInnerPage">
           <img src="images/Group 91.png"src="images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-          <div class="card-body d-flex flex-column" style="min-height: 110px;">
+          <div class="card-body d-flex flex-column">
             <h5 class="card-title">הבדלים בין מאגרי מידע</h5>
             <p class="card-text">הסבר על ההבדלים הבולטים בין המאגרים השונים כולל יתרונות וחסרונות של כל מאגר מידע</p>
           </div>
@@ -180,7 +180,7 @@
           <a href="dataBasesByPage.html"  class="text-decoration-none">
           <div class="card cardInnerPage">
             <img src="images/Group Chart.png"src="images/20230209_100856.jpg" class="card-img-top" alt="..." style="padding: 10px;">
-            <div class="card-body d-flex flex-column" style="min-height: 110px;">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">מאגרי מידע לפי פקולטות</h5>
               <p class="card-text">חלוקה של כלל מאגרי המידע אליהם מנויה הספרייה לפי פקולטות לתואר ראשון במכון הטכנולוגי HIT </p>
             </div>
