--- a/resourcesTypes.html
+++ b/resourcesTypes.html
@@ -139,7 +139,7 @@
    <main>
     <div class="position-relative">
       <img src="images/Vector (1).png" class="background-image">
-      <div class="container pt-lg-3 myCardsContainer">
+      <div class="container p-4 myCardsContainer">
         <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
