--- a/searchingArticles.html
+++ b/searchingArticles.html
@@ -139,7 +139,7 @@
    <main>
     <div class="position-relative">
       <img src="images/Vector.png" class="background-image">
-      <div class="container pt-lg-3 myCardsContainer">
+      <div class="container p-4 myCardsContainer">
         <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5> 
         <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
           <div class="col pb-4">
@@ -154,9 +154,7 @@
               <span class="badge badge-pill badge-light w-auto">  3 דקות</span> 
             </div>
           </div>
-        </div>
-      
-        
+        </div>   
         <div class="col pb-4">
           <div class="card cardInnerPage"  id="toEnglishSearchRise">
             <img src="images/Group 95.png" class="card-img-top" alt="..." style="padding: 10px;">
