--- a/about.html
+++ b/about.html
@@ -110,32 +110,27 @@
 
 
 
-
 <header>
-  <div class="header">
-    <div class="container-xxl pb-lg-5 hero-header">
-      <!--פירורי לחם-->
-      <div class="pt-3">
+  <div class="container pb-lg-5">
+    <div class="pt-3">
+            <!--פירורי לחם-->
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb justify-content-start">
           <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
           <li class="breadcrumb-item" aria-current="page">אודות</li>
-         </ol>
-         </nav> 
-        </div>
-          <!--סוף פירורי לחם-->
-     <div class="container my-lg-5 py-5">
-          <div class="row g-5 py-lg-5">
-            <div class="container">  
-              <div class="section-title position-relative text-start mb-5 pb-2">
-                <h2>אודות</h2>                
-            </div>
-          </div>
-       </div>
-       </div>
-      </div>  
-     </div>
-     </header>
+        </ol>
+      </nav> 
+    </div>
+              <!--סוף פירורי לחם-->
+
+    <div class="row py-lg-5">
+      <div class="section-title text-start mb-5">
+        <h2>אודות</h2>
+      </div>
+    </div>
+    <div style="margin-bottom: 5%;"></div>
+  </div>
+</header>
 
      <main>
       <div class="container" >
@@ -156,7 +151,7 @@
             </div>
           </div>
           <div class="col-sm-2 col-4 mb-4">
-            <img src="images/Ellipse 44.png" alt="Image 2" class="img-fluid">
+            <img src="images/Mask group.png" alt="Image 2" class="img-fluid">
             <div class="text-start">
               <p>גב' אסטה ורזר - אחראית יעץ, מידע והדרכות</p>
               <p>דוא"ל: ester@hit.ac.il</p>
@@ -180,7 +175,7 @@
             </div>
           </div>
           <div class="col-sm-2 col-4 mb-4">
-            <img src="images/Ellipse 44.png" alt="Image 5" class="img-fluid">
+            <img src="images/Group 257.png" alt="Image 5" class="img-fluid">
             <div class="text-center">
               <p>גב' ראואן ברהום- ספרנית השאלה</p>
               <p>דוא"ל: rawanb@hit.ac.il</p>
