--- a/dataBasesByPage.html
+++ b/dataBasesByPage.html
@@ -107,34 +107,28 @@
 
 
 <!--תפריט ניווט סוף-->
-
-
 <header>
-  <div class="header">
-    <div class="container-xxl pb-lg-5 hero-header">
-      <!--פירורי לחם-->
-      <div class="pt-3">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb justify-content-start">
-          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-          <li class="breadcrumb-item" aria-current="page"><a href="dataBases.html" class="my-link">מאגרי מידע</a> </li>
-          <li class="breadcrumb-item" aria-current="page">מאגרי מידע לפי פקולטות</li>
-         </ol>
-         </nav> 
-        </div>
-          <!--סוף פירורי לחם-->
-     <div class="container my-lg-5 py-5">
-          <div class="row g-5 py-lg-5">
-            <div class="container">  
-              <div class="section-title position-relative text-start mb-5 pb-2">
-                <h2>מאגרי מידע מומלצים לפי פקולטות</h2>                
-            </div>
+  <div class="container pb-lg-5">
+          <!--פירורי לחם-->
+    <div class="pt-3">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb justify-content-start">
+        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+        <li class="breadcrumb-item" aria-current="page"><a href="dataBases.html" class="my-link">מאגרי מידע</a> </li>
+        <li class="breadcrumb-item" aria-current="page">מאגרי מידע לפי פקולטות</li>
+       </ol>
+       </nav> 
+      </div>
+        <!--סוף פירורי לחם-->
+        <div class="row py-lg-5">
+          <div class="section-title text-start mb-5">
+            <h2>מאגרי מידע מומלצים לפי פקולטות</h2>                
           </div>
-       </div>
-       </div>
-      </div>  
-     </div>
-     </header>   
+        </div>
+        <div style="margin-bottom: 5%;"></div> 
+    </div>   
+   </header> 
+
    <main>
     <div class="container" >
     <div class="text-black pb-3">
