--- a/faqPage.html
+++ b/faqPage.html
@@ -111,10 +111,9 @@
 
 
 <header>
-  <div class="header">
-    <div class="container-xxl pb-lg-5 hero-header">
-      <!--פירורי לחם-->
-      <div class="pt-3">
+  <div class="container pb-lg-5">
+    <div class="pt-3">
+            <!--פירורי לחם-->
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb justify-content-start">
           <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
@@ -123,18 +122,15 @@
          </nav> 
         </div>
           <!--סוף פירורי לחם-->
-     <div class="container my-lg-5 py-5">
-          <div class="row g-5 py-lg-5">
-            <div class="container">  
-              <div class="section-title position-relative text-start mb-5 pb-2">
+          <div class="row py-lg-5">
+            <div class="section-title text-start mb-5">
                 <h2>שאלות נפוצות</h2>                
+              </div>
             </div>
+            <div style="margin-bottom: 5%;"></div>
           </div>
-       </div>
-       </div>
-      </div>  
-     </div>
-     </header>   
+</header>  
+
    <main>
     <div class="container" >
     <div class="accordion accordion-flush" id="accordionFlushExample">
