--- a/index.html
+++ b/index.html
@@ -111,24 +111,22 @@
 
 <!--תפריט ניווט סוף-->
 
-
 <header>
-  <div class="header">
-    <div class="container-xxl py-lg-1 mb-5">
-      <div class="container my-5 px-lg-5">
-        <div class="row g-5 py-lg-5">
-          <div class="col-lg-6 text-sm-start text-lg-start" style="color: #301a4b;">
-            <h1><strong>כיף שהצטרפתם!</strong></h1>
-            <h5 class="pt-4">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
-          </div>
-          <div class="col-lg-4 d-flex justify-content-end ">
-            <img class="img-fluid d-none d-lg-block float-start ml-lg-0" src="images/MainpageImage.png" alt="books">
-          </div>
-        </div>
+  <div class="container pb-lg-5 ">
+    <div class="row g-lg-5 py-lg-5">
+      <div class="col-lg-6 text-sm-start text-lg-start" style="color: #301a4b;">
+        <h1><strong>כיף שהצטרפתם!</strong></h1>
+        <h5 class="pt-4">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
+      </div>
+      <div class="col-lg-4 d-flex justify-content-end">
+        <figure>
+          <img class="img-fluid d-none d-lg-block" src="images/MainpageImage.png" alt="books">
+        </figure>
       </div>
     </div>
   </div>
 </header>
+
 
   <main>
     <div class="container the-index-page-cards-container">
@@ -145,7 +143,7 @@
             <span class="badge badge-pill badge-light w-auto" data-link="startpage.html">#ספרים ומאמרים</span>
             <span class="badge badge-pill badge-light w-auto" data-link="startpage.html">#התחברות לפורטל</span> 
           </div>    
-          <p class="card-text">פורטל הספרייה וקטלוג הספרייה מציעים מאגר חיפוש של ספרים, מאמרים ופרויקטי גמר. למדו כיצד לבצע פעולות מעמדת המידע באופן מהיר ופשוט.
+          <p class="card-text">פורטל וקטלוג הספרייה מציעים מאגר חיפוש של ספרים, מאמרים ופרויקטי גמר. למדו כיצד לבצע פעולות מעמדת המידע באופן מהיר ופשוט.
           </p>
         </div>
         
@@ -159,7 +157,7 @@
       <div class="card" style="animation: fadein 1.5s;">
         <img src="images/Group 105.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">סוגי מקורות מידע</h5>
+          <h5 class="card-title">מקורות מידע</h5>
           <div class="pb-lg-2 d-md-block">
             <span class="badge badge-pill badge-light w-auto" data-link="resourcesTypes.html">#מאפייני המאמר האקדמי</span>
             <span class="badge badge-pill badge-light w-auto"data-link="resourcesTypes.html" >#הערכת מידע</span>
