--- a/logInToCatalogVideoPage.html
+++ b/logInToCatalogVideoPage.html
@@ -109,33 +109,29 @@
 
 
 <!--תפריט ניווט סוף-->
-<header>
-  <div class="header">
-    <div class="container-xxl pb-lg-5 hero-header">
-      <!--פירורי לחם-->
-      <div class="pt-3">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb justify-content-start">
-          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-          <li class="breadcrumb-item" aria-current="page"><a href="startpage.html" class="my-link">פורטל וקטלוג הספרייה</a> </li>
-          <li class="breadcrumb-item" aria-current="page">התחברות לפורטל וקטלוג הספרייה</li>
 
-         </ol>
-         </nav> 
-        </div>
-          <!--סוף פירורי לחם-->
-     <div class="container my-lg-5 py-5">
-          <div class="row g-5 py-lg-5">
-            <div class="container">  
-              <div class="section-title position-relative text-start mb-5 pb-2">
-                <h2>התחברות לפורטל וקטלוג הספרייה</h2>                
-            </div>
+<header>
+  <div class="container pb-lg-5">
+          <!--פירורי לחם-->
+    <div class="pt-3">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb justify-content-start">
+        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+        <li class="breadcrumb-item" aria-current="page"><a href="startpage.html" class="my-link">פורטל וקטלוג הספרייה</a> </li>
+        <li class="breadcrumb-item" aria-current="page">התחברות לפורטל וקטלוג הספרייה</li>
+       </ol>
+       </nav> 
+      </div>
+        <!--סוף פירורי לחם-->
+        <div class="row py-lg-5">
+          <div class="section-title text-start mb-5">
+            <h2>התחברות לפורטל וקטלוג הספרייה</h2>                
           </div>
-       </div>
-       </div>
-      </div>  
-     </div>
-     </header>  
+        </div>
+        <div style="margin-bottom: 5%;"></div> 
+    </div>   
+   </header>  
+
 <main>
   <div class="container">
     <div class="row justify-content-center">
@@ -145,7 +141,6 @@
     </div>
   </div>
 </main>
-
 
 
 <footer class="footer rtl-footer-bg py-3 d-flex">
