--- a/sitemap.html
+++ b/sitemap.html
@@ -109,14 +109,10 @@
 
 <!--תפריט ניווט סוף-->
 
-
-
 <header>
-  <div class="header">
-   
-    <div class="container-xxl pb-lg-5 hero-header">
-      <!--פירורי לחם-->
-      <div class="pt-3">
+  <div class="container pb-lg-5">
+    <div class="pt-3">
+            <!--פירורי לחם-->
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb justify-content-start">
           <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
@@ -125,19 +121,15 @@
          </nav> 
         </div>
           <!--סוף פירורי לחם-->
-     <div class="container my-lg-5 py-5">
-          <div class="row g-5 py-lg-5">
-            <div class="container">  
-              <div class="section-title position-relative text-start mb-5 pb-2">
-                <h2 >מפת אתר</h2>                
+          <div class="row py-lg-5">
+            <div class="section-title text-start mb-5">
+              <h2 >מפת אתר</h2>  
             </div>
+            </div>
+            <div style="margin-bottom: 5%;"></div>
           </div>
-       </div>
-       </div>
-      </div>
-   
-     </div>
-     </header>      
+</header>  
+    
    <main>
     <div class="container">
       <div class="row">
