--- a/startpage.html
+++ b/startpage.html
@@ -108,35 +108,28 @@
 
 <!--תפריט ניווט סוף-->
 
-
 <header>
-  <div class="header">
-   
-    <div class="container-xxl pb-lg-5 hero-header">
-      <!--פירורי לחם-->
-      <div class="pt-3">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb justify-content-start">
-          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-          <li class="breadcrumb-item" aria-current="page">קטלוג הספרייה</li>
-         </ol>
-         </nav> 
-        </div>
-          <!--סוף פירורי לחם-->
-     <div class="container my-lg-5 py-5">
-          <div class="row g-5 py-lg-5">
-            <div class="container">  
-              <div class="section-title position-relative text-start mb-5 pb-2">
-                <h2>קטלוג הספרייה</h2>                
-            </div>
-            
-          </div>
-       </div>
-       </div>
+  <div class="container pb-lg-5">
+          <!--פירורי לחם-->
+    <div class="pt-3">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb justify-content-start">
+        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+        <li class="breadcrumb-item" aria-current="page">פורטל וקטלוג הספרייה
+        </li>
+       </ol>
+       </nav> 
       </div>
-   
-     </div>
-     </header>     
+        <!--סוף פירורי לחם-->
+        <div class="row py-lg-5">
+          <div class="section-title text-start mb-5">
+            <h2>פורטל וקטלוג הספרייה</h2>                
+          </div>
+        </div>
+        <div style="margin-bottom: 5%;"></div> 
+    </div>   
+   </header>  
+    
 
    <main>
     <div class="position-relative">
@@ -150,7 +143,7 @@
         <div class="card cardInnerPage">
        <img src="images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">אתר הספרייה</h5>
+            <h5 class="card-title">איך להתחבר לקטלוג הספרייה</h5>
             <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
           </div>
           <div class="p-3 d-none d-md-block">
@@ -166,7 +159,7 @@
         <div class="card cardInnerPage">
           <img src="images/GroupIconLIB.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">קטלוג הספרייה</h5>
+            <h5 class="card-title">חיפוש בקטלוג הספרייה</h5>
             <p class="card-text"> קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו: חיפוש ספרים, מאמרים ופרויקטי גמר</div>
               <div class="p-3 d-none d-md-block ">
                 <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
