--- a/whatIsDataBasePage.html
+++ b/whatIsDataBasePage.html
@@ -109,10 +109,10 @@
 
 
 <!--תפריט ניווט סוף-->
+
 <header>
-  <div class="header">
-    <div class="container-xxl pb-lg-5 hero-header">
-      <!--פירורי לחם-->
+    <div class="container pb-lg-5">
+            <!--פירורי לחם-->
       <div class="pt-3">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb justify-content-start">
@@ -123,19 +123,17 @@
          </nav> 
         </div>
           <!--סוף פירורי לחם-->
-     <div class="container my-lg-5 py-5">
-          <div class="row g-5 py-lg-5">
-            <div class="container">  
-              <div class="section-title position-relative text-start mb-5 pb-2">
-                <h2>מהו מאגר מידע</h2>                
+          <div class="row py-lg-5">
+            <div class="section-title text-start mb-5">
+              <h2>מהו מאגר מידע</h2>
             </div>
           </div>
-       </div>
-       </div>
-      </div>  
-     </div>
+          <div style="margin-bottom: 5%;"></div> 
+      </div>   
      </header>  
-   <main>
+   
+   
+     <main>
     <div class="container" >
     <iframe src="allTheRisesFolder/whatIsDataBaseRise/whatIsDataBase.html" width="100%" height="500"></iframe>
   </div>
