--- a/whatisbibListRisePage.html
+++ b/whatisbibListRisePage.html
@@ -109,32 +109,29 @@
 
 <!--תפריט ניווט סוף-->
 <header>
-  <div class="header">
-    <div class="container-xxl pb-lg-5 hero-header">
-      <!--פירורי לחם-->
-      <div class="pt-3">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb justify-content-start">
-          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-          <li class="breadcrumb-item" aria-current="page"><a href="bibList.html" class="my-link">רשימה ביבליוגרפית</a> </li>
-          <li class="breadcrumb-item" aria-current="page">מהי רשימה ביבליוגרפית</li>
+  <div class="container pb-lg-5">
+          <!--פירורי לחם-->
+    <div class="pt-3">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb justify-content-start">
+        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+        <li class="breadcrumb-item" aria-current="page"><a href="bibList.html" class="my-link">רשימה ביבליוגרפית</a> </li>
+        <li class="breadcrumb-item" aria-current="page">מהי רשימה ביבליוגרפית</li>
 
-         </ol>
-         </nav> 
-        </div>
-          <!--סוף פירורי לחם-->
-     <div class="container my-lg-5 py-5">
-          <div class="row g-5 py-lg-5">
-            <div class="container">  
-              <div class="section-title position-relative text-start mb-5 pb-2">
-                <h2>מהי רשימה ביבליוגרפית</h2>                
-            </div>
+       </ol>
+       </nav> 
+      </div>
+        <!--סוף פירורי לחם-->
+        <div class="row py-lg-5">
+          <div class="section-title text-start mb-5">
+            <h2>מהי רשימה ביבליוגרפית</h2>                
           </div>
-       </div>
-       </div>
-      </div>  
-     </div>
-     </header>  
+        </div>
+        <div style="margin-bottom: 5%;"></div> 
+    </div>   
+   </header>  
+
+
    <main>
     <div class="container" >
     <iframe src="allTheRisesFolder/whatisbibListRise/index.html" width="100%" height="500"></iframe>
