--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="">
+<html lang="he">
 
 <head>
     <meta charset="utf-8" />
@@ -111,12 +111,14 @@
 
 <!--תפריט ניווט סוף-->
 
+
+
 <header>
-  <div class="container pb-lg-5 ">
-    <div class="row g-lg-5 py-lg-5">
-      <div class="col-lg-6 text-sm-start text-lg-start" style="color: #301a4b;">
+  <div class="container pb-lg-5 mb-5" >
+    <div class="row g-lg-5 py-lg-5 ">
+      <div style="color: #301a4b;">
         <h1><strong>כיף שהצטרפתם!</strong></h1>
-        <h5 class="pt-4">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
+        <h5 class="pt-lg-4">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
       </div>
       <div class="col-lg-4 d-flex justify-content-end">
         <figure>
