--- a/about.html
+++ b/about.html
@@ -108,35 +108,33 @@
 
 <!--תפריט ניווט סוף-->
 
-
-
 <header>
   <div class="container pb-lg-5">
+          <!--פירורי לחם-->
     <div class="pt-3">
-            <!--פירורי לחם-->
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb justify-content-start">
-          <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-          <li class="breadcrumb-item" aria-current="page">אודות</li>
-        </ol>
-      </nav> 
-    </div>
-              <!--סוף פירורי לחם-->
-
-    <div class="row py-lg-5">
-      <div class="section-title text-start mb-5">
-        <h2>אודות</h2>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb justify-content-start">
+        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+        <li class="breadcrumb-item" aria-current="page">אודות</li>
+       </ol>
+       </nav> 
       </div>
-    </div>
-    <div style="margin-bottom: 5%;"></div>
-  </div>
-</header>
+        <!--סוף פירורי לחם-->
+        <div class="row py-lg-5">
+          <div class="section-title text-start mb-5">
+            <h2>אודות</h2>
+          </div>
+        </div>
+        <div style="margin-bottom: 5%;"></div> 
+    </div>   
+   </header>  
+
 
      <main>
       <div class="container" >
         <div class="text-lg-start text-sm-start" style="font-size: 18px;">
           אתר זה מיועד עבור סטודנטים הלומדים במכון הטכנולוגי בחולון HIT.<br>
-          באתר ניתן למצוא מגוון יחידות לימוד דיגיטליות וחוויותיות להיכרות בסיסית עם נושא האוריינות האקדמית כגון: לומדות, סרטונים ועזרי למידה שימושיים.
+          באתר ניתן למצוא מגוון יחידות לימוד דיגיטליות להיכרות בסיסית עם נושא האוריינות האקדמית כגון: לומדות, סרטונים ועזרי למידה שימושיים.
         </div>
         <div class="text-start pt-4">
           <h4>הכירו את צוות הספרייה</h4>
