--- a/startpage.html
+++ b/startpage.html
@@ -143,7 +143,7 @@
         <div class="card cardInnerPage">
        <img src="images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
           <div class="card-body d-flex flex-column" >
-            <h5 class="card-title">איך להתחבר לקטלוג הספרייה</h5>
+            <h5 class="card-title">איך לחפש בקטלוג הספרייה</h5>
             <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
           </div>
           <div class="p-3 d-none d-md-block">
