--- a/about.html
+++ b/about.html
@@ -39,6 +39,9 @@
       <li class="nav-item">
         <a class="nav-link" href="about.html">אודות</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="meetTheStaff.html">צוות הספרייה</a>
+      </li>
       <li class="nav-item dropdown" id="myDropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">תכנים</a>
         <ul class="dropdown-menu">
@@ -128,56 +131,25 @@
         <div style="margin-bottom: 5%;"></div> 
     </div>   
    </header>  
-
-
      <main>
-      <div class="container" >
-        <div class="text-lg-start text-sm-start" style="font-size: 18px;">
+      <div class="container text-center" >
+        <h2>אתר הדרכות דיגיטליות עבור ספריית HIT</h1><br>
+        <div style="font-size: 18px;">
           אתר זה מיועד עבור סטודנטים הלומדים במכון הטכנולוגי בחולון HIT.<br>
-          באתר ניתן למצוא מגוון יחידות לימוד דיגיטליות להיכרות בסיסית עם נושא האוריינות האקדמית כגון: לומדות, סרטונים ועזרי למידה שימושיים.
-        </div>
-        <div class="text-start pt-4">
-          <h4>הכירו את צוות הספרייה</h4>
-        </div>
+          באתר ניתן למצוא מגוון יחידות לימוד דיגיטליות להיכרות בסיסית עם נושא האוריינות האקדמית כגון: לומדות, סרטונים ועזרי למידה שימושיים.<br>
+          <br>
+          פרויקט גמר, תשע"ז<br>
+          <a href="https://www.hit.ac.il/telem/overview" target="_blank">הפקולטה לטכנולוגיות למידה</a>
+        </div><br>
+       
         <div class="row">
-          <div class="col-sm-2 col-4 mb-4">
-            <img src="images/Group 233.png" alt="Image 1" class="img-fluid">
-            <div class="text-start">
-              <p>גב' מיכל חיל - מנהלת הספרייה</p>
-              <p>דוא"ל: michalch@hit.ac.il </p>
-              <p>טלפון: 03-5026545</p>
-            </div>
-          </div>
-          <div class="col-sm-2 col-4 mb-4">
-            <img src="images/Mask group.png" alt="Image 2" class="img-fluid">
-            <div class="text-start">
-              <p>גב' אסטה ורזר - אחראית יעץ, מידע והדרכות</p>
-              <p>דוא"ל: ester@hit.ac.il</p>
-              <p>טלפון: 03-5026826</p>
-            </div>
-          </div>
-          <div class="col-sm-2 col-4 mb-4">
-            <img src="images/Group 234.png" alt="Image 3" class="img-fluid">
+          <div class="mb-4">
             <div class="text-center">
-              <p>גב' פולי פליישר - ספרנית השאלה ואחראית עיבוד טכני</p>
-              <p>דוא"ל: polyb@hit.ac.il</p>
-              <p>טלפון: 03-5026547</p>
-            </div>
-          </div>
-          <div class="col-sm-2 col-4 mb-4">
-            <img src="images/Group 232.png" alt="Image 4" class="img-fluid">
-            <div class="text-center">
-              <p>גב' מינה עדר - אחראית השאלה</p>
-              <p>דוא"ל: minae@hit.ac.il</p>
-              <p>טלפון: 03-5026547 / 03-5026826</p>
-            </div>
-          </div>
-          <div class="col-sm-2 col-4 mb-4">
-            <img src="images/Group 257.png" alt="Image 5" class="img-fluid">
-            <div class="text-center">
-              <p>גב' ראואן ברהום- ספרנית השאלה</p>
-              <p>דוא"ל: rawanb@hit.ac.il</p>
-              <p>טלפון: 03-5026545</p>
+              <img src="images/HITlogo.png" alt="Image 1" class="img-fluid mx-auto"><br><br>
+              <p><strong>צוות הפרוייקט:</strong> דולב קליינר וקורל ששון</p>
+              <p><strong>מנחים:</strong> שיר פילקנשטיין ועמרי כהנא</p>
+              <p>בשיתוף עם צוות ספריית המכון הטכנולוגי חולון, מומחיות התוכן: מיכל חיל ואסטה ורזר </p>
+              <p>&copy; כל הזכויות שמורות למכון הטכנולוגי חולון HIT</p>
             </div>
           </div>
         </div>
@@ -206,7 +178,7 @@
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div>
         <a class="text-black">צור קשר</a>
-        <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה במייל: <br>Library@hit.ac.il</p>
+        <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה בטלפון: <br>03-5026547</p>
       </div>
       <div class="mobileFooter text-center" style="font-style: italic; line-height: 1.8em;">
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון<br>
