--- a/citationRisePage.html
+++ b/citationRisePage.html
@@ -41,6 +41,9 @@
       <li class="nav-item">
         <a class="nav-link" href="about.html">אודות</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="meetTheStaff.html">צוות הספרייה</a>
+      </li>
       <li class="nav-item dropdown" id="myDropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">תכנים</a>
         <ul class="dropdown-menu">
@@ -923,7 +926,7 @@
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div>
         <a class="text-black">צור קשר</a>
-        <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה במייל: <br>Library@hit.ac.il</p>
+        <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה בטלפון: <br>03-5026547</p>
       </div>
       <div class="mobileFooter text-center" style="font-style: italic; line-height: 1.8em;">
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון<br>
