--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
      <!--פונט רוביק-->
 
   <!-- Icon Font Stylesheet -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+ 
 
     <!-- JS -->
     <script src="jScripts/bootstrap.bundle.min.js"></script>
@@ -41,6 +42,9 @@
     <ul class="navbar-nav me-auto mb-2 mb-md-0">
       <li class="nav-item">
         <a class="nav-link" href="about.html">אודות</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="meetTheStaff.html">צוות הספרייה</a>
       </li>
       <li class="nav-item dropdown" id="myDropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">תכנים</a>
@@ -99,7 +103,6 @@
       <input class="form-control mr-2" type="search" placeholder="הקלידו נושא לחיפוש..." aria-label="Search" id="search-box">
       <div class="input-group-append">
         <button class="btn btn-outline-primary d-none" type="submit" id="search-btn">
-          <i class="fa fa-search"></i>
         </button>
       </div>
     </div>
@@ -115,14 +118,15 @@
 
 <header>
   <div class="container pb-lg-5 mb-5" >
-    <div class="row g-lg-5 py-lg-5 ">
+    <div class="row g-lg-5 py-lg-5 pt-3">
       <div style="color: #301a4b;">
-        <h1><strong>כיף שהצטרפתם!</strong></h1>
-        <h5 class="pt-lg-4">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
+        <h3><strong>כיף שהצטרפתם!</strong></h3>
+        <h5 class="pt-lg-2">ברוכים הבאים לאתר הלימודי<br>של ספריית המכון הטכנולוגי HIT</h5>
       </div>
-      <div class="col-lg-4 d-flex justify-content-end">
+      <div class="d-none d-lg-block">
         <figure>
-          <img class="img-fluid d-none d-lg-block" src="images/MainpageImage.png" alt="books">
+          <img class="img-fluid " src="images/MainpageImage.png" alt="books">
+          <p class="" style="font-size: xx-small; position:absolute; color: #F2DAE0!important;"> Image by <a style="color: #F2DAE0!important;text-decoration:none!important;" href="https://www.freepik.com/free-vector/online-education-landing-page_4360104.htm#query=digital%20library&position=19&from_view=search&track=ais" target="_blank">Freepik</a></p>
         </figure>
       </div>
     </div>
@@ -134,7 +138,7 @@
     <div class="container the-index-page-cards-container">
       <h5 class="mt-2 pb-4 pr-3" style="color: #301a4b; margin-right: 20px;">איזה נושא תרצו ללמוד היום?</h5>
       <div class="row">
-    <div class="col-sm-4 pb-4">
+     <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
         <a href="startpage.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 1.5s;">
@@ -151,9 +155,9 @@
         
       </div>
         </a>
-    </div>
-    </div>
-    <div class="col-sm-4 pb-4">
+     </div>
+      </div>
+     <div class="col-sm-4 pb-4">
       <div class="card-wrapper">
         <a href="resourcesTypes.html"  class="text-decoration-none">
       <div class="card" style="animation: fadein 1.5s;">
@@ -248,7 +252,7 @@
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div>
         <a class="text-black">צור קשר</a>
-        <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה במייל: <br>Library@hit.ac.il</p>
+        <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה בטלפון: <br>03-5026547</p>
       </div>
       <div class="mobileFooter text-center" style="font-style: italic; line-height: 1.8em;">
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון<br>
