--- a/meetTheStaff.html
+++ b/meetTheStaff.html
@@ -18,7 +18,6 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-
     <!-- JS -->
     <script src="jScripts/bootstrap.bundle.min.js"></script>
     <script src="jScripts/javascript.js"></script>
@@ -41,7 +40,7 @@
         <a class="nav-link" href="about.html">אודות</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="meetTheStaff.html">צוות הספרייה</a>
+        <a class="nav-link" href="about.html">צוות הספרייה</a>
       </li>
       <li class="nav-item dropdown" id="myDropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">תכנים</a>
@@ -112,41 +111,78 @@
 
 <!--תפריט ניווט סוף-->
 
-
-     <header>
-      <div class="container pb-lg-5">
-              <!--פירורי לחם-->
-        <div class="pt-3">
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb justify-content-start">
-            <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
-            <li class="breadcrumb-item" aria-current="page"><a href="searchingArticles.html" class="my-link">חיפוש מתקדם</a> </li>
-            <li class="breadcrumb-item" aria-current="page">חיפוש מתקדם במאגרי מידע</li>
-           </ol>
-           </nav> 
-          </div>
-            <!--סוף פירורי לחם-->
-            <div class="row py-lg-5">
-              <div class="section-title text-start mb-5">
-                <h2>חיפוש מתקדם במאגרי מידע</h2>                
-              </div>
-            </div>
-            <div style="margin-bottom: 5%;"></div> 
-        </div>   
-       </header>  
-
-<main>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-12 text-center">
-        <iframe src="https://player.vimeo.com/video/831112279?h=2c668cc357" width="100%" height="468"frameborder="0"  style="border:none" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<header>
+  <div class="container pb-lg-5">
+          <!--פירורי לחם-->
+    <div class="pt-3">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb justify-content-start">
+        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+        <li class="breadcrumb-item" aria-current="page">צוות הספרייה</li>
+       </ol>
+       </nav> 
       </div>
-    </div>
-  </div>
-</main>
+        <!--סוף פירורי לחם-->
+        <div class="row py-lg-5">
+          <div class="section-title text-start mb-5">
+            <h2>הכירו את צוות הספרייה</h2>
+          </div>
+        </div>
+        <div style="margin-bottom: 5%;"></div> 
+    </div>   
+   </header>  
 
 
+     <main>
+      <div class="container" >
 
+        <div class="row">
+          <div class="col-sm-2 col-4 mb-4">
+            <img src="images/Group 233.png" alt="Image 1" class="img-fluid">
+            <div class="text-start">
+              <p>גב' מיכל חיל - מנהלת הספרייה</p>
+              <p>דוא"ל: michalch@hit.ac.il </p>
+              <p>טלפון: 03-5026545</p>
+            </div>
+          </div>
+          <div class="col-sm-2 col-4 mb-4">
+            <img src="images/Mask group.png" alt="Image 2" class="img-fluid">
+            <div class="text-start">
+              <p>גב' אסטה ורזר - אחראית יעץ, מידע והדרכות</p>
+              <p>דוא"ל: ester@hit.ac.il</p>
+              <p>טלפון: 03-5026826</p>
+            </div>
+          </div>
+          <div class="col-sm-2 col-4 mb-4">
+            <img src="images/Group 234.png" alt="Image 3" class="img-fluid">
+            <div class="text-center">
+              <p>גב' פולי פליישר - ספרנית השאלה ואחראית עיבוד טכני</p>
+              <p>דוא"ל: polyb@hit.ac.il</p>
+              <p>טלפון: 03-5026547</p>
+            </div>
+          </div>
+          <div class="col-sm-2 col-4 mb-4">
+            <img src="images/Group 232.png" alt="Image 4" class="img-fluid">
+            <div class="text-center">
+              <p>גב' מינה עדר - אחראית השאלה</p>
+              <p>דוא"ל: minae@hit.ac.il</p>
+              <p>טלפון: 03-5026547 / 03-5026826</p>
+            </div>
+          </div>
+          <div class="col-sm-2 col-4 mb-4">
+            <img src="images/Group 257.png" alt="Image 5" class="img-fluid">
+            <div class="text-center">
+              <p>גב' ראואן ברהום- ספרנית השאלה</p>
+              <p>דוא"ל: rawanb@hit.ac.il</p>
+              <p>טלפון: 03-5026545</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    
+
+  
 <footer class="footer rtl-footer-bg py-3 d-flex">
   <div class="container">
     <div class="footerText d-flex flex-column flex-md-row justify-content-md-between">
