--- a/startpage.html
+++ b/startpage.html
@@ -39,6 +39,9 @@
       <li class="nav-item">
         <a class="nav-link" href="about.html">אודות</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="meetTheStaff.html">צוות הספרייה</a>
+      </li>
       <li class="nav-item dropdown" id="myDropdown">
         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">תכנים</a>
         <ul class="dropdown-menu">
@@ -122,7 +125,7 @@
       </div>
         <!--סוף פירורי לחם-->
         <div class="row py-lg-5">
-          <div class="section-title text-start mb-5">
+          <div class="section-title text-start">
             <h2>פורטל וקטלוג הספרייה</h2>                
           </div>
         </div>
@@ -134,8 +137,8 @@
    <main>
     <div class="position-relative">
     <img src="images/Vector4.png" class="background-image">
-    <div class="container p-4 myCardsContainer">
-     
+    <div class="container p-4">
+      <div class="myCardsContainer">
     <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם... </h5>
     <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
       <div class="col pb-4">
@@ -171,7 +174,8 @@
       </div> 
     </div>
   </div>
-    </div>
+</div>    
+</div>
 </main>
 
   
@@ -196,7 +200,7 @@
       <a class="text-black text-center" href="sitemap.html">מפת אתר</a>
       <div>
         <a class="text-black">צור קשר</a>
-        <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה במייל: <br>Library@hit.ac.il</p>
+        <p class="text-center contact-descreption mt-2">ניתן לפנות לצוות הספרייה בטלפון: <br>03-5026547</p>
       </div>
       <div class="mobileFooter text-center" style="font-style: italic; line-height: 1.8em;">
         <p>האתר פותח במסגרת פרויקט גמר במכון הטכנולוגי בחולון<br>
