--- a/testpage.html
+++ b/testpage.html
@@ -110,10 +110,66 @@
 
 <!--תפריט ניווט סוף-->
    
+<header>
+  <div class="container pb-lg-5">
+          <!--פירורי לחם-->
+    <div class="pt-3">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb justify-content-start">
+        <li class="breadcrumb-item active"><a href="index.html" class="my-link">דף הבית</a></li>
+        <li class="breadcrumb-item" aria-current="page">פורטל וקטלוג הספרייה
+        </li>
+       </ol>
+       </nav> 
+      </div>
+        <!--סוף פירורי לחם-->
+        <div class="row py-lg-5">
+          <div class="section-title text-start">
+            <h2>פורטל וקטלוג הספרייה</h2>                
+          </div>
+        </div>
+        <div style="margin-bottom: 5%;"></div> 
+    </div>   
+   </header>  
    <main>
-    <div class="container" >
-    <iframe src="englishSearch/ק.html" width="100%" height="500"></iframe>
-  </div>
+    <main>
+      <img src="images/Vector4.png" class="background-image">
+      <div class="container p-4">
+        <h5 class="p-3">בחרו יחידת לימוד שמעניינת אתכם...</h5>
+        <div class="row row-cols-1 row-cols-md-4 justify-content-lg-start justify-content-center align-items-center">
+          <div class="col pb-4">
+            <a href="logInToCatalogVideoPage.html" class="text-decoration-none">
+              <div class="card cardInnerPage">
+                <img src="images/Group 84.png" class="card-img-top" alt="..." style="padding: 10px;">
+                <div class="card-body d-flex flex-column">
+                  <h5 class="card-title">איך לחפש בקטלוג הספרייה</h5>
+                  <p class="card-text">היכרות בסיסית עם הפורטל והסבר על אופן ההתחברות מעמדת המידע</p>
+                </div>
+                <div class="p-3 d-none d-md-block">
+                  <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
+                  <span class="badge badge-pill badge-light w-auto">1:40 דקות</span>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="col pb-4">
+            <a href="libraryCatalogVideoPage.html" class="text-decoration-none">
+              <div class="card cardInnerPage">
+                <img src="images/GroupIconLIB.png" class="card-img-top" alt="..." style="padding: 10px;">
+                <div class="card-body d-flex flex-column">
+                  <h5 class="card-title">חיפוש בקטלוג הספרייה</h5>
+                  <p class="card-text">קטלוג הספרייה כולל הצגת אפשרויות חיפוש בקטלוג כמו: חיפוש ספרים, מאמרים ופרויקטי גמר</p>
+                </div>
+                <div class="p-3 d-none d-md-block">
+                  <span class="badge badge-pill badge-light w-auto">סרטון הדרכה</span>
+                  <span class="badge badge-pill badge-light w-auto">2:20 דקות</span>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </main>
 </main>
 
   
